# xmarket

./: .dockerignore  .env.development  .env.example  .eslintrc.cjs  .gitignore  .prettierrc  .railway-trigger  .secrets.txt  API_INTEGRATIONS.md  CHANGELOG.md  DEPLOYMENT.md  Dockerfile  Dockerfile.backend  Dockerfile.orderbook  Dockerfile.reality-engine  LICENSE  PHASE_4_TESTING.md  PHASE_5_TESTING.md  PR_01_SCAFFOLD.md  PR_02_PHASE_1.md  Procfile  QUICKSTART.md  QUICK_REFERENCE.md  QUICK_START.md  RAILWAY_DEPLOY.md  RAILWAY_DEPLOYMENT.md  RAILWAY_SERVICE_CONFIG.md  README.md  breakdown.txt  checklist.txt  database.py  details.txt  docker-compose.yml  final_verification.md  idea.txt  masterplan.txt  nixpacks.toml  nixpacks.toml.disabled  package-lock.json  package.json  (+15 more)
.github/: PULL_REQUEST_TEMPLATE.md
backend/: .dockerignore  Dockerfile  __init__.py  admin.py  auth.py  blender.py  ingest.py  main.py  models.py  public_api.py  railway.json  requirements.txt  test_integration.db  test_integration.py
config/: README.md  __init__.py  constants.py  env.py
docs/: CORRECTIONS_APPLIED.md  MANUAL_UPDATE_NEEDED.md  decisions.md  (+4 more)
matching-engine/: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs
matching-engine/.github/workflows/: ci.yml
matching-engine/helm-chart/: Chart.yaml  values.yaml
matching-engine/helm-chart/templates/: _helpers.tpl  deployment.yaml  pvc.yaml  service.yaml
matching-engine/proto/: orders.proto
matching-engine/src/: lib.rs  main.rs  matching.rs  orderbook.rs  snapshot.rs  types.rs  wal.rs
matching-engine/tools/loadtest/: run.sh
(+367 files in other folders)
